--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "electron . & ./launch_pelion_client.sh"
+        "start": "electron ."
     },
     "author": "",
     "license": "ISC"
